# ChangeLog for kde-misc/kgrubeditor
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kgrubeditor/ChangeLog,v 1.1 2009/05/10 12:28:10 hwoarang Exp $

*kgrubeditor-0.8.5 (10 May 2009)

  10 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +kgrubeditor-0.8.5.ebuild, +metadata.xml:
  Moved from sunrise. Fixes bug 210960
