@@ -1,8 +1,8 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kgrubeditor/kgrubeditor-0.8.5.ebuild,v 1.2 2009/05/10 16:32:16 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kgrubeditor/kgrubeditor-0.8.5.ebuild,v 1.3 2011/01/31 05:00:05 tampakrap Exp $
 
-EAPI="2"
+EAPI=3
 
 inherit kde4-base
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.kde-apps.org/content/show.php?content=75442"
 SRC_URI="mirror://sourceforge/${PN}/${MY_PN}-${PV}-src.tar.bz2"
 
 LICENSE="GPL-2"
-SLOT="0"
+SLOT="4"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
